--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -30,6 +30,10 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
@@ -58,6 +62,9 @@ dependencies {
     //rxjava
     api 'io.reactivex.rxjava3:rxjava:3.0.13'
     api 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    //BRVAH,https://github.com/CymChad/BaseRecyclerViewAdapterHelper
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6'
 
 
 }
