--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     api 'com.google.android.material:material:1.3.0'
     api 'androidx.constraintlayout:constraintlayout:2.0.4'
     api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    api 'androidx.multidex:multidex:2.0.1'
     testApi 'junit:junit:4.+'
     androidTestApi 'androidx.test.ext:junit:1.1.2'
     androidTestApi 'androidx.test.espresso:espresso-core:3.3.0'
