--- a/settings.gradle
+++ b/settings.gradle
@@ -2,3 +2,4 @@ rootProject.name = "RxjavaArchitectureApplication"
 include ':app'
 include ':baselibrary'
 include ':userlibrary'
+include ':dialoglibrary'
