--- a/userlibrary/src/main/AndroidManifest.xml
+++ b/userlibrary/src/main/AndroidManifest.xml
@@ -2,4 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.zhl.userlibrary">
 
+    <application>
+        <activity android:name=".activity.UserIndexActivity" />
+
+    </application>
+
 </manifest>
