--- a/userlibrary/build.gradle
+++ b/userlibrary/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -15,6 +16,12 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
+
+        kapt {
+            arguments {
+                arg("AROUTER_MODULE_NAME", project.getName())
+            }
+        }
     }
 
     buildTypes {
@@ -41,4 +48,6 @@ android {
 dependencies {
 
     implementation project(path: ':baselibrary')
+
+    kapt 'com.alibaba:arouter-compiler:1.5.2'
 }
