--- a/dialoglibrary/build.gradle
+++ b/dialoglibrary/build.gradle
@@ -35,5 +35,10 @@ android {
 
 dependencies {
 
-    implementation project(path: ':baselibrary')
+//    implementation project(path: ':baselibrary')
+
+    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    api 'androidx.core:core-ktx:1.3.2'
+    api 'androidx.appcompat:appcompat:1.3.0'
+    api 'com.google.android.material:material:1.3.0'
 }
