--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     api 'androidx.constraintlayout:constraintlayout:2.0.4'
     api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     api 'androidx.multidex:multidex:2.0.1'
+    api("androidx.viewpager2:viewpager2:1.0.0")
     testApi 'junit:junit:4.+'
     androidTestApi 'androidx.test.ext:junit:1.1.2'
     androidTestApi 'androidx.test.espresso:espresso-core:3.3.0'
