--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,7 @@
         </activity>
         <activity android:name=".activity.CommonListActivity" />
         <activity android:name=".activity.SampleViewPager2Activity" />
+        <activity android:name=".activity.DialogTestActivity" />
     </application>
 
 </manifest>
