--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -23,6 +24,7 @@
         <activity android:name=".activity.CommonListActivity" />
         <activity android:name=".activity.SampleViewPager2Activity" />
         <activity android:name=".activity.DialogTestActivity" />
+        <activity android:name=".activity.ProgressBarTestActivity" />
     </application>
 
 </manifest>
