--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -86,4 +86,10 @@ dependencies {
     //mmkv
     api 'com.tencent:mmkv-static:1.2.10'
 
+    //图片选择
+    api 'com.github.HuanTanSheng:EasyPhotos:3.1.3' //androidx版本，支持android 10、11，永久维护
+
+    //ucrop图片裁切,轻巧版
+    api 'com.github.yalantis:ucrop:2.2.6'
+
 }
