--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".activity.SampleViewPager2Activity" />
         <activity android:name=".activity.DialogTestActivity" />
         <activity android:name=".activity.ProgressBarTestActivity" />
+        <activity android:name=".activity.MagicIndicatorSampleActivity" />
     </application>
 
 </manifest>
