--- a/lib_core/build.gradle
+++ b/lib_core/build.gradle
@@ -56,6 +56,21 @@ dependencies {
     androidTestApi 'androidx.test.ext:junit:1.1.2'
     androidTestApi 'androidx.test.espresso:espresso-core:3.3.0'
 
+    //jetpack
+    // LiveData
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.3.1")
+    // ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1")
+    // Lifecycles only (without ViewModel or LiveData)
+    implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.3.1")
+    // Annotation processor
+//    kapt("androidx.lifecycle:lifecycle-compiler:2.3.1")
+    // alternately - if using Java8, use the following instead of lifecycle-compiler
+    implementation("androidx.lifecycle:lifecycle-common-java8:2.3.1")
+
+
+
+
     //retrofit
     api 'com.squareup.retrofit2:retrofit:2.9.0'
     //Gson converter
