--- a/module_A/src/main/AndroidManifest.xml
+++ b/module_A/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.zhl.module_a">
 
     <application>
-        <activity android:name="com.zhl.module_a.activity.UserIndexActivity" />
+        <activity android:name="com.zhl.module_a.activity.ModuleATestActivity" />
 
     </application>
 
