--- a/lib_common/build.gradle
+++ b/lib_common/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     api project(path: ':lib_core')
     api project(path: ':lib_fileprovider')
     api project(path: ':lib_dialog')
+    api project(path: ':lib_webview')
 
 
 }
