--- a/lib_core/build.gradle
+++ b/lib_core/build.gradle
@@ -5,12 +5,12 @@ plugins {
 }
 
 android {
-    compileSdkVersion rootProject.ext.android.compileSdkVersion
-    buildToolsVersion rootProject.ext.android.buildToolsVersion
+    compileSdkVersion configs.android.compileSdkVersion
+    buildToolsVersion configs.android.buildToolsVersion
 
     defaultConfig {
-        minSdkVersion rootProject.ext.android.minSdkVersion
-        targetSdkVersion rootProject.ext.android.targetSdkVersion
+        minSdkVersion configs.android.minSdkVersion
+        targetSdkVersion configs.android.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -44,89 +44,65 @@ android {
 }
 
 dependencies {
-    api "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    api 'androidx.core:core-ktx:1.5.0'
-    api 'androidx.appcompat:appcompat:1.3.0'
-    api 'com.google.android.material:material:1.3.0'
-    api 'androidx.constraintlayout:constraintlayout:2.0.4'
-    api 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
-    api 'androidx.multidex:multidex:2.0.1'
-    api("androidx.viewpager2:viewpager2:1.0.0")
-    testApi 'junit:junit:4.+'
-    androidTestApi 'androidx.test.ext:junit:1.1.2'
-    androidTestApi 'androidx.test.espresso:espresso-core:3.3.0'
+
+    api deps.androidx.kotlin_stdlib
+    api deps.androidx.android_core_ktx
+    api deps.androidx.appcompat
+    api deps.androidx.material
+    api deps.androidx.multidex
+
+    api deps.androidx.constraintlayout
+    api deps.androidx.swiperefreshlayout
+    api deps.androidx.viewpager2
+
+    testApi deps.test.junit
+    androidTestApi deps.test.android_junit
+    androidTestApi deps.test.espresso
 
     //jetpack
-    // LiveData
-    api("androidx.lifecycle:lifecycle-livedata-ktx:2.3.1")
-    // ViewModel
-    api("androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1")
-    // Lifecycles only (without ViewModel or LiveData)
-    api("androidx.lifecycle:lifecycle-runtime-ktx:2.3.1")
-    // Annotation processor
-//    kapt("androidx.lifecycle:lifecycle-compiler:2.3.1")
-    // alternately - if using Java8, use the following instead of lifecycle-compiler
-    api("androidx.lifecycle:lifecycle-common-java8:2.3.1")
+    api deps.jetpack.lifecycle
+    api deps.jetpack.lifecycle_compiler
+    api deps.jetpack.livedata
+    api deps.jetpack.viewmodel
+    api deps.jetpack.coroutines_core
+    api deps.jetpack.coroutines_android
+    api deps.jetpack.room
+    api deps.jetpack.room_ktx
+    testApi deps.jetpack.room_testing
 
-    //协程
-    api("org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.5.0")
-    api("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
+    //网络
+    api deps.network.retrofit
+    api deps.network.retrofit_converter_gson
+    api deps.network.okhttp
+    api deps.network.okhttp_logging_interceptor
+    api deps.network.okio
 
-
-    //retrofit
-    api 'com.squareup.retrofit2:retrofit:2.9.0'
-    //Gson converter
-    api 'com.squareup.retrofit2:converter-gson:2.9.0'
-    //RxJava3 Adapter
-    api 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
-    //okhttp
-    api 'com.squareup.okhttp3:okhttp:4.9.1'
-    api 'com.squareup.okhttp3:logging-interceptor:4.9.1'
-    //okio
-    api 'com.squareup.okio:okio:2.9.0'
+    //其他第三方库
+    api deps.arouter.arouter_api
+    kapt deps.arouter.arouter_compiler
+    api deps.mmkv.mmkv_static
+    api deps.adapter.BaseRecyclerViewAdapterHelper
+    api deps.coil.coil
+    api deps.easy_photos.easy_photos
+    api deps.ucrop.ucrop
+    api deps.magic_indicator.magic_indicator
+    api deps.permission.permissionx
 
 
     //rxjava
     api 'io.reactivex.rxjava3:rxjava:3.0.13'
     api 'io.reactivex.rxjava3:rxandroid:3.0.0'
-
-    //BRVAH,https://github.com/CymChad/BaseRecyclerViewAdapterHelper
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:3.0.6'
+    //RxJava3 Adapter
+    api 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
     //glide
     api 'com.github.bumptech.glide:glide:4.11.0'
-
-    //ARouter
-    api 'com.alibaba:arouter-api:1.5.2'
-    kapt 'com.alibaba:arouter-compiler:1.5.2'
-
-    //mmkv
-    api 'com.tencent:mmkv-static:1.2.10'
-
-    //图片选择
-    api 'com.github.HuanTanSheng:EasyPhotos:3.1.3' //androidx版本，支持android 10、11，永久维护
-
-    //ucrop图片裁切,轻巧版
-    api 'com.github.yalantis:ucrop:2.2.6'
-
-    //magicIndicator
-    api 'com.github.hackware1993:MagicIndicator:1.7.0' // for androidx
-
-    //运行时权限
-    api 'com.permissionx.guolindev:permissionx:1.4.0'
 
     //RxPermissions
     api 'com.github.tbruyelle:rxpermissions:0.12'
 
     //EventBus
     api 'org.greenrobot:eventbus:3.2.0'
-
-    //room
-    api "androidx.room:room-runtime:2.3.0"
-    // optional - Kotlin Extensions and Coroutines support for Room
-    api "androidx.room:room-ktx:2.3.0"
-    // optional - Test helpers
-    testApi "androidx.room:room-testing:2.3.0"
 
     //uber AutoDispose，处理rxjava内存泄漏
     var auto_dispose_version = '2.1.0'
