--- a/lib_dialog/build.gradle
+++ b/lib_dialog/build.gradle
@@ -34,11 +34,13 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.2.1'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation deps.androidx.kotlin_stdlib
+    implementation deps.androidx.android_core_ktx
+    implementation deps.androidx.appcompat
+    implementation deps.androidx.material
+    implementation deps.androidx.multidex
+
+    testImplementation deps.test.junit
+    androidTestImplementation deps.test.android_junit
+    androidTestImplementation deps.test.espresso
 }
