--- a/lib_download/build.gradle
+++ b/lib_download/build.gradle
@@ -33,11 +33,13 @@ android {
 }
 
 dependencies {
+    implementation deps.androidx.kotlin_stdlib
+    implementation deps.androidx.android_core_ktx
+    implementation deps.androidx.appcompat
+    implementation deps.androidx.material
+    implementation deps.androidx.multidex
 
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    testImplementation deps.test.junit
+    androidTestImplementation deps.test.android_junit
+    androidTestImplementation deps.test.espresso
 }
