--- a/lib_fileprovider/build.gradle
+++ b/lib_fileprovider/build.gradle
@@ -33,7 +33,5 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    testImplementation 'junit:junit:4.+'
+    api deps.androidx.android_core_ktx
 }
