--- a/lib_webview/build.gradle
+++ b/lib_webview/build.gradle
@@ -48,5 +48,5 @@ dependencies {
     implementation project(path: ':lib_core')
 
     //组件中依赖阿里路由编译框架
-    kapt 'com.alibaba:arouter-compiler:1.5.2'
+    kapt deps.arouter.arouter_compiler
 }
