--- a/lib_core/build.gradle
+++ b/lib_core/build.gradle
@@ -65,11 +65,16 @@ dependencies {
     api deps.jetpack.lifecycle_compiler
     api deps.jetpack.livedata
     api deps.jetpack.viewmodel
+    api 'androidx.fragment:fragment-ktx:1.3.6'
+    api 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
     api deps.jetpack.coroutines_core
     api deps.jetpack.coroutines_android
     api deps.jetpack.room
     api deps.jetpack.room_ktx
     testApi deps.jetpack.room_testing
+
+    api ("androidx.navigation:navigation-fragment-ktx:2.3.5")
+    api ("androidx.navigation:navigation-ui-ktx:2.3.5")
 
     //网络
     api deps.network.retrofit
