--- a/module_main/build.gradle
+++ b/module_main/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
 }
 
 android {
@@ -48,4 +49,7 @@ dependencies {
     implementation project(path: ':lib_download')
     //ARouter注解处理器
     kapt deps.arouter.arouter_compiler
+
+    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
 }
