--- a/module_main/src/main/AndroidManifest.xml
+++ b/module_main/src/main/AndroidManifest.xml
@@ -11,11 +11,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".test.activity.SampleViewPager2Activity" />
-        <activity android:name=".test.activity.DialogTestActivity" />
-        <activity android:name=".test.activity.MagicIndicatorSampleActivity" />
+        <activity android:name=".activity.SampleViewPager2Activity" />
+        <activity android:name=".activity.DialogTestActivity" />
+        <activity android:name=".activity.MagicIndicatorSampleActivity" />
         <activity android:name=".activity.BasicCoroutineActivity" />
         <activity android:name=".activity.NetworkTestActivity" />
+        <activity android:name=".activity.UserProfileActivity" />
 
     </application>
 
