--- a/lib_core/build.gradle
+++ b/lib_core/build.gradle
@@ -65,16 +65,15 @@ dependencies {
     api deps.jetpack.lifecycle_compiler
     api deps.jetpack.livedata
     api deps.jetpack.viewmodel
-    api 'androidx.fragment:fragment-ktx:1.3.6'
-    api 'androidx.lifecycle:lifecycle-viewmodel-savedstate:2.3.1'
+    api deps.jetpack.fragment_ktx
     api deps.jetpack.coroutines_core
     api deps.jetpack.coroutines_android
     api deps.jetpack.room
     api deps.jetpack.room_ktx
     testApi deps.jetpack.room_testing
-
-    api ("androidx.navigation:navigation-fragment-ktx:2.3.5")
-    api ("androidx.navigation:navigation-ui-ktx:2.3.5")
+    //持续新增jetpack库，用于学习
+    api("androidx.navigation:navigation-fragment-ktx:2.3.5")
+    api("androidx.navigation:navigation-ui-ktx:2.3.5")
 
     //网络
     api deps.network.retrofit
@@ -93,5 +92,6 @@ dependencies {
     api deps.ucrop.ucrop
     api deps.magic_indicator.magic_indicator
     api deps.permission.permissionx
+    api deps.event_bus.live_event_bus
 
 }
