--- a/module_main/src/main/AndroidManifest.xml
+++ b/module_main/src/main/AndroidManifest.xml
@@ -5,7 +5,6 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application>
-
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -13,6 +12,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.TestActivity" />
         <activity android:name=".activity.SampleViewPager2Activity" />
         <activity android:name=".activity.DialogTestActivity" />
         <activity android:name=".activity.MagicIndicatorSampleActivity" />
@@ -21,7 +21,6 @@
         <activity android:name=".activity.UserProfileActivity" />
         <activity android:name=".activity.LiveDataSampleActivity" />
         <activity android:name=".activity.LottieTestActivity" />
-
     </application>
 
 </manifest>
