--- a/settings.gradle
+++ b/settings.gradle
@@ -7,5 +7,5 @@ include ':lib_fileprovider'
 include ':module_b'
 include ':lib_common'
 include ':module_main'
-include ':module_book'
+include ':module_sample'
 include ':lib_download'
