--- a/module_sample/src/main/AndroidManifest.xml
+++ b/module_sample/src/main/AndroidManifest.xml
@@ -5,6 +5,8 @@
     <application>
 
         <activity android:name="com.zhl.module_sample.activity.SampleListActivity" />
+        <activity android:name="com.zhl.module_sample.activity.SampleDetailActivity" />
+
 
     </application>
 
