新增通用列表刷新样式

--- a/module_sample/src/main/AndroidManifest.xml
+++ b/module_sample/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application>
 
         <activity android:name="com.zhl.module_sample.activity.SampleListActivity" />
+        <activity android:name="com.zhl.module_sample.activity.SmartListActivity" />
         <activity android:name="com.zhl.module_sample.activity.SampleDetailActivity" />
 
 
