--- a/lib_core/build.gradle
+++ b/lib_core/build.gradle
@@ -100,4 +100,14 @@ dependencies {
     api deps.event_bus.live_event_bus
     api deps.lottie.lottie
 
+
+    api 'com.scwang.smart:refresh-layout-kernel:2.0.3'      //核心必须依赖
+    api  'com.scwang.smart:refresh-header-classics:2.0.3'    //经典刷新头
+    api  'com.scwang.smart:refresh-header-radar:2.0.3'       //雷达刷新头
+    api  'com.scwang.smart:refresh-header-falsify:2.0.3'     //虚拟刷新头
+    api  'com.scwang.smart:refresh-header-material:2.0.3'    //谷歌刷新头
+    api  'com.scwang.smart:refresh-header-two-level:2.0.3'   //二级刷新头
+    api  'com.scwang.smart:refresh-footer-ball:2.0.3'        //球脉冲加载
+    api  'com.scwang.smart:refresh-footer-classics:2.0.3'    //经典加载
+
 }
