--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,7 @@ kotlin.code.style=official
 
 android.enableJetifier=true
 android.useAndroidX=true
+
+
+#当前是否是组件化模块，false表示整体编译，true表示分模块编译
+isComponentMode=true
