--- a/module_b/src/main/module_manifest/AndroidManifest.xml
+++ b/module_b/src/main/module_manifest/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <application
         android:name=".debug.BApplication"
         android:allowBackup="true"
+        android:label="module_b"
         android:icon="@mipmap/ic_launcher"
         android:theme="@style/Theme.CommonAppTheme"
         >
