--- a/module_main/src/main/module_manifest/AndroidManifest.xml
+++ b/module_main/src/main/module_manifest/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <application
         android:name=".debug.MainApplication"
         android:allowBackup="true"
+        android:label="module_main"
         android:icon="@mipmap/ic_launcher"
         android:theme="@style/Theme.CommonAppTheme">
         <activity android:name=".debug.DebugActivity">
