新增模块Application调用方式

--- a/module_sample/src/main/module_manifest/AndroidManifest.xml
+++ b/module_sample/src/main/module_manifest/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.zhl.module_sample">
 
     <application
-        android:name=".debug.SampleApplication"
+        android:name=".debug.SampleDebugApplication"
         android:allowBackup="true"
         android:label="module_sample"
         android:icon="@mipmap/ic_launcher"
