--- a/module_a/src/main/module_manifest/AndroidManifest.xml
+++ b/module_a/src/main/module_manifest/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
-        android:name=".debug.AApplication"
+        android:name=".debug.ADebugApplication"
         android:allowBackup="true"
         android:label="module_a"
         android:icon="@mipmap/ic_launcher"
