--- a/module_b/src/main/module_manifest/AndroidManifest.xml
+++ b/module_b/src/main/module_manifest/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
-        android:name=".debug.BApplication"
+        android:name=".debug.BDebugApplication"
         android:allowBackup="true"
         android:label="module_b"
         android:icon="@mipmap/ic_launcher"
