--- a/module_main/src/main/module_manifest/AndroidManifest.xml
+++ b/module_main/src/main/module_manifest/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
-        android:name=".debug.MainApplication"
+        android:name=".debug.MainDebugApplication"
         android:allowBackup="true"
         android:label="module_main"
         android:icon="@mipmap/ic_launcher"
