--- a/module_main/build.gradle
+++ b/module_main/build.gradle
@@ -15,4 +15,6 @@ dependencies {
     implementation project(path: ':lib_download')
     //ARouter注解处理器
     kapt deps.arouter.arouter_compiler
+
+    kapt 'com.github.hufeiyang.Android-AppLifecycleMgr:applifecycle-compiler:1.0.4'
 }
