--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ buildscript {
         //加载插件applifecycle
         classpath 'com.github.hufeiyang.Android-AppLifecycleMgr:applifecycle-plugin:1.0.3'
 
+        //滴滴dokit
+        classpath 'io.github.didi.dokit:dokitx-plugin:3.5.0'
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
